<resources>
    <!-- String related to App -->
    <string name="app_name">Mafia Mania</string>
    <string name="action_settings">Settings</string>

    <!-- String related to Hint String -->
    <string name="hint_string_enter_username">Enter your username</string>
    <string name="hint_string_choose_username">Choose your username</string>
    <string name="hint_text_enter_player_name">Enter the player name</string>

    <!-- String related to Hyperlink -->
    <string name="text_signup"><a href="">Signup</a></string>

    <!-- String related to Regular Text -->
    <string name="text_play">Select your play mode</string>
    <string name="text_or">\nOr</string>
    <string name="text_add_all_name">\u26A0 Add all the players including organizer \n</string>
    <string name="text_select_organizer">Select the game organizer \n</string>

    <!-- String related to Buttons -->
    <string name="button_offline">Offline</string>
    <string name="button_online">Online</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_add">Add</string>
    <string name="button_next">Next</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>


</resources>
