<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/a11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/appName1"
            android:textSize="40sp"
            android:textColor="#dfd50f"
            android:layout_gravity="center"/>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/a12"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout android:id="@+id/play_mode" android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_play"
            android:id="@+id/textPlay"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"/>

            <Button android:id="@+id/buttonOffline" style="?android:textAppearanceMedium"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="20sp" android:text="@string/button_offline"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:background="#e7241a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_or"
                android:id="@+id/textOr"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000" />

            <Button android:id="@+id/buttonOnline" style="?android:textAppearanceMedium"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="20sp" android:text="@string/button_online"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:background="#ff7e51c2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>