<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".AddOrDeletePlayers"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/appName4"
        android:textSize="40sp"
        android:textColor="#dfd50f"
        android:layout_weight="0.00" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:gravity="center_vertical|center_horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89sp">

            <EditText
                android:id="@+id/txtPlayerName"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/hint_text_enter_player_name" />

            <Button
                android:id="@+id/button_addPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add"
                android:layout_toRightOf="@+id/txtInput"
                android:textStyle="bold"
                android:textColor="#ffffffff"
                android:background="#e7241a"/>

            <ScrollView android:id="@+id/login_form_scroll_view" android:layout_width="match_parent"
                android:layout_height="wrap_content"></ScrollView>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="354dp"
        android:layout_weight="0.84">
    </ListView>
    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:background="#e7241a"/>
 </LinearLayout>