<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

<LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView2"
            android:textSize="40dp"
            android:textColor="#dfd50f" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

            <LinearLayout android:id="@+id/login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView android:id="@+id/username" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/string_enter_username"
                        android:inputType="textPersonName" android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginBottom="10dp"
                        android:textColorHint="#ffffffff"
                        android:textColor="#ffffffff" />
                </ScrollView>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal">
        <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="20dp" android:text="@string/button_login"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:background="#ff7e51c2" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_link"
            android:layout_centerInParent="true"
            android:text="@string/text_signup"
            android:autoLink="all"
            android:linksClickable="true"
            android:textSize="20dp"
            android:textColor="#ffffffff"
            android:textColorLink="@android:color/white"/>
    </LinearLayout>
</LinearLayout>